# samflash_alternative

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  ETHICAL_USAGE.md  README.md  simple_gui_test.cpp  test_transport.cpp
.github/workflows/: build-and-test.yml
docs/: Beginners_Guide.md  Installation_Guide.md  LICENSE.txt
src/Core/: device_interface.h  device_interface_factory.cpp  flash_manager.cpp  flash_manager.h  generic_strategy.h  iflash_strategy.h  samsung_device_detector.cpp  samsung_device_detector.h  samsung_flasher.h  samsung_strategy.h  serial_transport.cpp  serial_transport.h  serial_transport_stub.cpp  usb_serial_interface.cpp  usb_serial_interface.h
src/GUI/: main.cpp  main_window.cpp  main_window.h
src/Installer/: install.ps1
src/Scripts/: cli.py  cli_utils.h  main.cpp
tests/: test_device_interface.cpp  test_flash_manager.cpp  test_flash_manager.py
